--- a/index.html
+++ b/index.html
@@ -2623,10 +2623,8 @@
                     <h4 style="text-align: center;">Dev's Notes on Brands</h4>
                     <ul>
                         <li>This guide is geared towards players who want to optimize their demon brand setups.</li>
-                        <li>This is an advanced guide, meaning that beginners shouldn't focus too much on things
-                            discussed in this guide. (They should really focus on using whatever brands they have to
-                            complete sets and get set bonuses)</li>
-                        <li>This guide will be discussing 6* brands only. Most of this can be applied to 4 and 5*
+                        <li>Beginners shouldn't focus too much on things discussed in this guide. (Not every brand needs to be optimized to be usable)</li>
+                        <li>We will be discussing 6* brands only. Most of this can be applied to 4 and 5*
                             brands as well.</li>
                     </ul>
                     <p><strong>Terminology</strong></p>
@@ -2886,7 +2884,7 @@
                     <p>&nbsp;</p>
                     <p><strong>Building An Example Demon</strong></p>
                     <ul>
-                        <li>Here I will build a "Top Tier" Demon and show you what to look for in terms of brands</li>
+                        <li>Here I will build multiple "Top Tier" Demons and show you what to look for in terms of brands</li>
                         <li>Coming Soon</li>
                     </ul>
                 </b-card>
