--- a/index.html
+++ b/index.html
@@ -2653,7 +2653,7 @@
                                     capability.</li>
                             </ul>
                         </li>
-                        <li>The main and secondary stats add FLAT stats, while the tertiary stats add PERCENTAGE
+                        <li>The main and secondary stats of this brand add FLAT stats, while the tertiary stats add PERCENTAGE
                             bonuses to your stats.</li>
                         <li>Upon first glance, this brand would be well suited for a Physical Attacker.
                             <ul>
