--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
                     <b-nav-item href="#" @click="route('fusion.fusion')" :active="isRoute('fusion.fusion')">{{
                         $t('message.normal_fusion') }}</b-nav-item>
                     <b-nav-item href="#" @click="route('skill')" :active="isRoute('skill')">{{ $t('message.skill') }}</b-nav-item>
-                    <b-nav-item href="#" @click="route('guide')" :active="isRoute('guide')">Advanced Guide: Demons</b-nav-item>
-                    <b-nav-item href="#" @click="route('brand')" :active="isRoute('brand')">Advanced Guide: Brands</b-nav-item>
+                    <b-nav-item href="#" @click="route('guide')" :active="isRoute('guide')">Guide: Demons</b-nav-item>
+                    <b-nav-item href="#" @click="route('brand')" :active="isRoute('brand')">Guide: Brands</b-nav-item>
                 </b-navbar-nav>
                 <b-navbar-nav class="ml-auto">
                     <b-nav-form action="#" class="d-none d-md-block">
