--- a/index.html
+++ b/index.html
@@ -2582,7 +2582,7 @@
                         <ul>
                         <li>The main stat is HP, and adds 114 HP to your demon.</li>
                         <li>The secondary stat is Mag DEF, and adds 42 Mag DEF to your demon.</li>
-                        <li>The tertiary stats are Accuracy, Phys ATK and Critical, and add 7% accuracy/hit rate, 12% physical attack and 2% critical chance to your demon.</li>
+                        <li>The tertiary stats are Accuracy, Phys ATK and Critical, and add 7% accuracy, 12% physical attack and 2% critical chance to your demon.</li>
                         <li>The brand set is War, and will add 20% Phys ATK when paired with two other War brands (For a total of 3 War brands in the set)</li>
                         <li>The brand type is Head. Head brands will always have flat HP as their main stat, so we have to look at tertiary stats for bonuses to a Physical Attacker's offensive capability.</li>
                         </ul>
