Demon Guide: Ananta Update

--- a/index.html
+++ b/index.html
@@ -1779,7 +1779,7 @@
                   <div class="DG-Demon"><br>
                     <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Ananta')">Demon Information</a></strong></p>
                     <p>Ananta's main use is seen in pvp due to his auto buffs: Auto Sukuka, Rakuka, (and Taruka when purple). He has Amazing stats: high health, vitality, agility 
-                       meaning he'd be good at tanking. Also is immune to ice, elec and light which is pretty cool (weak to force). He is the only 5 star in the game 
+                       meaning he'd be good at tanking. Also is immune to ice, elec and light which is pretty cool (weak to force). He is the only 5★ in the game 
                        without a unique skill, given his use this is fine anyways.
                     </p>
                     <div class="DG-Table">
