--- a/index.html
+++ b/index.html
@@ -2601,6 +2601,8 @@
                         </tbody>
                     </table>
                     <br>
+                </b-card>
+                <b-card>
                     <p><strong>Types</strong></p>
                     <ul>
                         <li>Here I will explain the main and secondary stats for each brand type.</li>
@@ -2692,7 +2694,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <p>&nbsp;</p>
+                </b-card>
+                <b-card>
                     <p><strong>Sets</strong></p>
                     <ul>
                         <li>Try to get 2 set bonuses. (One 3-part set bonus and One 2-part set bonus)</li>
@@ -2729,7 +2732,8 @@
                             </ul>
                         </li>
                     </ul>
-                    <p>&nbsp;</p>
+                </b-card>
+                <b-card>
                     <p><strong>Tertiaries &amp; Leveling Up Brands</strong></p>
                     <ul>
                         <li>These two things go together since leveling up tertiaries are the things that drive many
@@ -2798,9 +2802,17 @@
                                     up with that tertiary being Phys ATK +12% at level 15 due to these boosts.</li>
                             </ul>
                         </li>
-                        <li><strong>The Example Brand Shown Above</strong>
+                    </ul>
+                    <strong>The Example Brand Revisted</strong>
+                    <br>
+                    <br>
+                    <table style="height: 20px; width: 1500px;">
+                        <tbody>
+                        <tr>
+                        <td style="width: 100px;"><img id="Brand1" src="images/theme/brand1.png" style="width:85px; height:300px;" /></td>
+                        <td style="width: 1400px;">&nbsp;
                             <ul>
-                                <li>Started out with two tertiaries: 4% Accuracy, 4% Phys ATK.
+                                <li>The brand originally started out with two tertiaries at level 1: 4% Accuracy, 4% Phys ATK.
                                     <ul>
                                         <li>I kept this brand because the two tertiaries matched up well for Physical
                                             Attackers</li>
@@ -2812,9 +2824,12 @@
                                 <li>At level 15, the Phys ATK tertiary was boosted again, from 8% to 12%.</li>
                                 <li>As you can see, boosting a tertiary twice can yield very high stats.</li>
                             </ul>
-                        </li>
-                    </ul>
-                    <p>&nbsp;</p>
+                        </td>
+                        </tr>
+                        </tbody>
+                    </table>
+                </b-card>
+                <b-card>
                     <p><strong>Building An Example Demon</strong></p>
                     <ul>
                         <li>Here I will build multiple "Top Tier" Demons and show you what to look for in terms of brands</li>
