--- a/index.html
+++ b/index.html
@@ -2560,7 +2560,7 @@
                     <ul>
                         <li>This guide is geared towards players who want to optimize their demon brand setups.</li>
                         <li>Beginners shouldn't focus too much on things discussed in this guide. (Not every brand needs to be optimized to be usable)</li>
-                        <li>We will be discussing 6* brands only. Most of this can be applied to 4 and 5★
+                        <li>We will be discussing 6★ brands only. Most of this can be applied to 4 and 5★
                             brands as well.</li>
                     </ul>
                     <p><strong>Terminology</strong></p>
@@ -2615,7 +2615,7 @@
                                 <li>The main stat of a head brand is always flat HP.</li>
                                 <li>The secondary stat will be a flat bonus of either HP, Phys ATK, Mag ATK, Phys DEF,
                                     or Mag DEF</li>
-                                <li>For 6* brands, you will always get a flat 114 HP and 42 points of a secondary stat.</li>
+                                <li>For 6★ brands, you will always get a flat 114 HP and 42 points of a secondary stat.</li>
                                 <li>The goal for head brands is to get a secondary stat that works well for your demon
                                     and start with 1 or 2 decent tertiary stats at level 1. (This will be explained
                                     further down)</li>
@@ -2658,7 +2658,7 @@
                                 <li>The main stat of a body brand is always either flat Phys DEF or flat Mag DEF.</li>
                                 <li>The secondary stat will be a flat bonus of either HP, Phys ATK, Mag ATK, Phys DEF,
                                     or Mag DEF</li>
-                                <li>For 6* brands, you will always get a flat 89 Phys/Mag DEF and 42 points of a
+                                <li>For 6★ brands, you will always get a flat 89 Phys/Mag DEF and 42 points of a
                                     secondary stat.</li>
                                 <li>The goal for body brands is to get a secondary stat that works well for your demon
                                     and start with 1 or 2 decent tertiary stats at level 1. (This will be explained
@@ -2686,7 +2686,7 @@
                                 <li>The truly blessed can find special brands with both the same main and secondary
                                     stat (So the main is percentage and the secondary is flat) but this is pretty rare
                                     and hard to get.</li>
-                                <li>The "Perfect Brand" would be a 6* brand that has matching main and secondary stats
+                                <li>The "Perfect Brand" would be a 6★ brand that has matching main and secondary stats
                                     ALONG with three
                                     decent tertiary stats, with one tertiary stat having at least 10%.
                                     <ul>
@@ -2746,7 +2746,7 @@
                                 <li>Brands at level 1 could start with 0, 1, 2 or 3 tertiaries.</li>
                                 <li>Aim for brands starting with 1 or 2 decent tertiaries. (1 for usable brands, 2 for
                                     possibly OP brands)</li>
-                                <li>6* Brands starting with 3 tertiaries are unicorns (rare). Don't feel the need to
+                                <li>6★ Brands starting with 3 tertiaries are unicorns (rare). Don't feel the need to
                                     chase them, especially since brands with 2 tertiaries have a chance to be just as
                                     good.</li>
                                 <li>In many cases you would want percentage tertiaries, but not always. (Explained in a
@@ -2791,7 +2791,7 @@
                                 </li>
                                 <li>At level 15, the brand will boost one of the brands existing tertiary stats.
                                     <ul>
-                                        <li>This means that if you want to optimize your 6* brands tertiary stats, they
+                                        <li>This means that if you want to optimize your 6★ brands tertiary stats, they
                                             must be leveled to 15.</li>
                                     </ul>
                                 </li>
