--- a/index.html
+++ b/index.html
@@ -2561,7 +2561,7 @@
                         <li>This guide is geared towards players who want to optimize their demon brand setups.</li>
                         <li>Beginners shouldn't focus too much on things discussed in this guide. (Not every brand needs to be optimized to be usable)</li>
                         <li>We will be discussing 6★ brands only. Most of this can be applied to 4 and 5★
-                            brands as well.</li>
+                            brands however.</li>
                     </ul>
                     <p><strong>Terminology</strong></p>
                     <ul>
