--- a/index.html
+++ b/index.html
@@ -2573,7 +2573,7 @@
                         <li>Likewise, the term <strong>Set</strong> will be the category that decides what set bonus
                             the brand will give. (Divine, War, Spell, Ward, Aim, etc.)</li>
                     </ul>
-                    <p>First things first, let's analyze a brand:</p>
+                    <p>First things first, let's analyze an example brand:</p>
                     <table style="height: 20px; width: 1500px;">
                         <tbody>
                         <tr>
