Demon Guide: Spelling error

--- a/index.html
+++ b/index.html
@@ -1401,7 +1401,7 @@
                   <!-- [Alilat] -->
                   <button id="Alilat" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Alilat</button>
                   <div class="DG-Demon"><br>
-                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Alilat')">Demon Informations</a></strong></p>
+                    <p><strong><a href="javascript:void(0)" @click="show_guide_devil('Alilat')">Demon Information</a></strong></p>
                     <p>Really good defensive demon to use, helping immensely vs piercing units (such as those that can be seen in AG). 
                        This is because of her unique skill Repel Pierce, ignoring the pierce effect on units that repel the attribute. 
                        She is easy/cheap to fuse, has no weaknesses and really high luck + Infernal Mask meaning she can inflict ailments quite well and be 
