--- a/index.html
+++ b/index.html
@@ -2834,7 +2834,7 @@
                 <b-card>
                     <p><strong>Building An Example Demon</strong></p>
                     <ul>
-                        <li>Here I will build multiple "Top Tier" Demons and show you what to look for in terms of brands</li>
+                        <li>Here I will build multiple optimized Demons and show you what to look for in terms of brands</li>
                         <li>Coming Soon</li>
                     </ul>
                 </b-card>
