--- a/index.html
+++ b/index.html
@@ -2736,7 +2736,7 @@
                     </ul>
                 </b-card>
                 <b-card>
-                    <p><strong>Tertiaries &amp; Leveling Up Brands</strong></p>
+                    <p><strong>Tertiary Stats &amp; Leveling Up Brands</strong></p>
                     <ul>
                         <li>These two things go together since leveling up tertiaries are the things that drive many
                             players crazy.</li>
