Demon Guide: Updated Notable Demons
- Added Pallas Athena and King Frost to 4 star demons
- Added Other section for 3 star and below demons

--- a/index.html
+++ b/index.html
@@ -426,15 +426,26 @@
                       <td><a href="#Fenrir"><img src="images/devil/youjyuu_huenriru.png"><br>Fenrir</a></td>
                       <td><a href="#Gucumatz"><img src="images/devil/ryuusin_gukumatu.png"><br>Gucumatz</a></td>
                       <td><a href="#Hecatoncheires"><img src="images/devil/Hecatoncheires.png"><br>Hecatoncheires</a></td>
+                      <td><a href="#KingFrost"><img src="images/devil/maou_jyakuhurosuto.png"><br>King Frost</a></td>
                       <td><a href="#Loki"><img src="images/devil/maou_roki.png"><br>Loki</a></td>
-                      <td><a href="#Rakshasa"><img src="images/devil/Rakshasa.png"><br>Rakshasa</a></td>
-                      <td><a href="#Rangda"><img src="images/devil/kijyo_randa.png"><br>Rangda</a></td>
+                      <td><a href="#PallasAthena"><img src="images/devil/megami_parasuatena.png"><br>Pallas Athena</a></td>
                     </tr>
                     <tr>
+                      <td><a href="#Rakshasa"><img src="images/devil/Rakshasa.png"><br>Rakshasa</a></td>
+                      <td><a href="#Rangda"><img src="images/devil/kijyo_randa.png"><br>Rangda</a></td>
                       <td><a href="#Sandalphon"><img src="images/devil/daitensi_sandaruhuon.png"><br>Sandalphon</a></td>
                       <td><a href="#Sleipnir"><img src="images/devil/seijyuu_sureipuniru.png"><br>Sleipnir</a></td>
                       <td><a href="#Yatagarasu"><img src="images/devil/reityou_yatagarasu.png"><br>Yatagarasu</a></td>
                       <td><a href="#ZhongKui"><img src="images/devil/kisin_syouki.png"><br>Zhong Kui</a></td>
+                    </tr>
+                    <tr>
+                      <td class="DG-Table-Label" rowspan = "2">Other</td>
+                      <td><a href="#Baihu"><img src="images/devil/seijyuu_byako.png"><br>Baihu</a></td>
+                      <td><a href="#HareOfInaba"><img src="images/devil/tinjyuu_inabasirousagi.png"><br>Hare Of Inaba</a></td>
+                      <td><a href="#Mitra"><img src="images/devil/majin_mitora.png"><br>Mitra</a></td>
+                      <td><a href="#Zouchouten"><img src="images/devil/kisin_zoutyouten.png"><br>Zouchouten</a></td>
+                      <td><a href="#JackFrost"><img src="images/devil/yousei_jyakufurosuto.png"><br>Jack Frost</a></td>
+                      <td><a href="#PyroJack"><img src="images/devil/yousei_jyakurantan.png"><br>Pyro Jack</a></td>
                     </tr>
                   </tbody></table>
                 </div>
