--- a/index.html
+++ b/index.html
@@ -2843,7 +2843,18 @@
                     </table>
                 </b-card>
                 <b-card>
-                        <p><strong>Building An Example Demon: Part 1</strong></p>
+                  <!-- 
+                    - Add id if you want to jump to it via a ToC, Name of whatever the tab is in the NAME_HERE section
+                    - Don't forget to wrap it with </div> to close it
+                    - Add class if you want to use css for formatting it. 
+                    - Currently set to use my formatting since we need to hide it by default
+                    
+                    <button id="" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">NAME_HERE</button>
+                    <div class=""><br>
+                  -->
+                      <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Building An Example Demon: Part 1</button>
+                      <div class="DG-Demon"><br>
+                        <!-- <p><strong>Building An Example Demon: Part 1</strong></p> -->
                         <p>Let's analyze a Level 50 Yoshitsune: (Analysis of different demons coming soon)</p>
                         <ul>
                             <li>1089 HP (1% is 10.89 HP)</li>
@@ -3250,6 +3261,7 @@
                         </ul>
                         <p>&nbsp;</p>
                         <p>&nbsp;</p>
+                      </div>
                     </b-card>
                 <brand></brand>
             </b-tab>
