--- a/index.html
+++ b/index.html
@@ -2852,7 +2852,7 @@
                     <button id="" class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">NAME_HERE</button>
                     <div class=""><br>
                   -->
-                      <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Building An Example Demon: Part 1</button>
+                      <button class="DG-CollapsibleButton" onclick="toggleCollapsible(this)">Building An Example Demon: Part 1 - Yoshitsune</button>
                       <div class="DG-Demon"><br>
                         <!-- <p><strong>Building An Example Demon: Part 1</strong></p> -->
                         <p>Let's analyze a Level 50 Yoshitsune: (Analysis of different demons coming soon)</p>
