--- a/index.html
+++ b/index.html
@@ -2755,6 +2755,8 @@
                             of the percentage stats.
                             <ul>
                                 <li>Brands at level 1 could start with 0, 1, 2 or 3 tertiaries.</li>
+                                <li>Flat tertiaries start from anywhere from 1-25 at level 1, and can boost up to 40 points</li>
+                                <li>Percentage tertiaries start from anywhere from 1-4% at level 1, and can boost up to 15%</li>
                                 <li>Aim for brands starting with 1 or 2 decent tertiaries. (1 for usable brands, 2 for
                                     possibly OP brands)</li>
                                 <li>6★ Brands starting with 3 tertiaries are unicorns (rare). Don't feel the need to
@@ -2771,7 +2773,7 @@
                                 <li>At level 3, if the brand does not have at least 1 tertiary stat, then a tertiary
                                     stat will be generated.
                                     <ul>
-                                        <li>Otherwise, one of the brands existing tertiary stats will be boosted.</li>
+                                        <li>Otherwise, one of the brands existing tertiary stats will be boosted. (This is the only way to get tertiaries above 5%)</li>
                                     </ul>
                                 </li>
                                 <li>At level 6, if the brand does not have at least 2 tertiary stats, then a tertiary
