--- a/index.html
+++ b/index.html
@@ -3210,7 +3210,7 @@
                         <br>
                         <p><strong>Concluding Analysis</strong></p>
                         <ul>
-                            <li>From the brands, Yoshi has acquired the following stats
+                            <li>From the brands, Yoshi has acquired the following stats:
                                 <ul>
                                     <li>744.5 Phys ATK (74 flat, 90%)</li>
                                     <li>15% Accuracy
