--- a/index.html
+++ b/index.html
@@ -2626,7 +2626,7 @@
                                 <li>The primary stat of a head brand is always flat HP.</li>
                                 <li>The secondary stat will be a flat bonus of either HP, Phys ATK, Mag ATK, Phys DEF,
                                     or Mag DEF</li>
-                                <li>For max level 6★ brands, you will always get a flat 114 HP and 42 points of a secondary stat.</li>
+                                <li>For max level 6★ brands, you will always get a flat 114 HP primary and 42 points of a secondary stat.</li>
                                 <li>The goal for head brands is to get a secondary stat that works well for your demon
                                     and start with 1 or 2 decent tertiary stats at level 1. (This will be explained
                                     further down)</li>
@@ -2669,7 +2669,7 @@
                                 <li>The primary stat of a body brand is always either flat Phys DEF or flat Mag DEF.</li>
                                 <li>The secondary stat will be a flat bonus of either HP, Phys ATK, Mag ATK, Phys DEF,
                                     or Mag DEF</li>
-                                <li>For max level 6★ brands, you will always get a flat 89 Phys/Mag DEF and 42 points of a
+                                <li>For max level 6★ brands, you will always get a flat 89 Phys/Mag DEF primary and 42 points of a
                                     secondary stat.</li>
                                 <li>The goal for body brands is to get a secondary stat that works well for your demon
                                     and start with 1 or 2 decent tertiary stats at level 1. (This will be explained
